# placamia

./: .gitignore  AGENTS.md  Makefile  README.md
apps/api/: .env.example  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/app/: main.py
apps/api/app/api/: dependencies.py  router.py
apps/api/tests/: test_admin_authorization.py  test_auth.py  test_categories.py  test_checkout_service.py  test_design_endpoints.py  test_design_ownership_migration.py  test_design_validation.py  test_designs.py  test_health.py  test_kits.py  test_order_cancellation_endpoint.py  test_order_cancellation_service.py  test_order_creation_endpoint.py  test_order_creation_service.py  test_order_detail_endpoint.py  test_order_lifecycle.py  test_order_list_endpoint.py  test_order_status_endpoint.py  test_orders.py  test_paid_order_handoff_orchestration_service.py  test_payment_initialization_concurrency.py  test_payment_initialization_endpoint.py  test_payment_lifecycle.py  test_payment_provider_identity_migrations.py  test_payment_provider_persistence.py  test_payment_webhook_endpoint.py  test_payment_webhook_processing_service.py  test_payment_webhook_verification_service.py  test_payments.py  test_pricing_endpoint.py  test_pricing_service.py  test_products.py  test_provider_acceptance_endpoint.py  test_provider_acceptance_service.py  test_provider_adapter.py  test_provider_delivery_endpoint.py  test_provider_delivery_service.py  test_provider_handoff_payload_service.py  test_provider_handoff_transmission_service.py  test_provider_production_progress_endpoint.py  (+9 more)
(+201 files in other folders)
