[project]
name = "placamia-api"
version = "0.1.0"
description = "Backend for PlacamIA"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "psycopg2-binary",
    "alembic",
    "python-dotenv",
    "pytest",
    "httpx",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]