[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "placamia-api"
version = "0.1.0"
description = "Backend for PlacamIA"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "psycopg2-binary",
    "alembic",
    "python-dotenv",
    "pytest",
    "httpx",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
namespaces = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
